--- a/application/raptor/content/news-index.html
+++ b/application/raptor/content/news-index.html
@@ -73,7 +73,7 @@
                 }
                 let actions = `<div class="mb-1">${buttons.join(' ')}</div>`;
 
-                rowsHTML += `<tr><th scope="row">${record['published_date']}</th><td>${flag} <span class="text-secondary fw-lighter">${record.code}</span> </td><td>${image}</td><td>${record.title}</td><td>${data.files_counts[id] ?? 0}</td><td>${category_type}</td><td>${published}</td><td>${actions}</td></tr>`;
+                rowsHTML += `<tr><th scope="row">${record['published_at']}</th><td>${flag} <span class="text-secondary fw-lighter">${record.code}</span> </td><td>${image}</td><td>${record.title}</td><td>${data.files_counts[id] ?? 0}</td><td>${category_type}</td><td>${published}</td><td>${actions}</td></tr>`;
             });
             news.setBody(rowsHTML);
             news.setReady();
