--- a/application/raptor/content/news-read.html
+++ b/application/raptor/content/news-read.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>{{ record['title'] }}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="{{ record['short']|e }}">
+        <meta name="description" content="{{ record['description']|e }}">
         {% if favico is not empty %}<link rel="icon" href="{{ favico }}" type="image/x-icon">{% endif %}
         {% if shortcut_icon is not empty %}<link rel="shortcut icon" href="{{ shortcut_icon }}" type="image/png">{% endif %}
         {% if apple_touch_icon is not empty %}<link rel="apple-touch-icon" href="{{ apple_touch_icon }}">{% endif %}
@@ -26,7 +26,7 @@
                 <img class="img-fluid mt-1" file-data-fancybox src="{{ record['photo'] }}">
             {% endif %}
             <div class="col-12 mt-1">
-                {{ record['full'] }}
+                {{ record['content'] }}
             </div>
         </main>
         <script type="text/javascript">
