--- a/application/raptor/content/news-update.html
+++ b/application/raptor/content/news-update.html
@@ -1,15 +1,12 @@
 {% set categories = {
-  'general': { 'mn': 'Ерөнхий' },
-  'photo': { 'mn': 'Фото' },
-  'video': { 'mn': 'Видео' },
-  'announcement': { 'mn': 'Зар мэдээлэл' },
-  'special': { 'mn': 'Тусгай' }
+  'general': { 'mn': 'Цаг үеийн мэдээ' },
+  'announcement': { 'mn': 'ААН-ийн анхааралд'  },
+  'price': { 'mn': 'Үнэ, ханшийн мэдээ', 'en': 'Price and exchange rate news' },
+  'video': { 'mn': 'Видео мэдээ' }
 } %}
 {% set types = {
   'common': { 'mn': 'Нийтлэг' },
-  'featured': { 'mn': 'Онцолсон' },
-  'hot': { 'mn': 'Халуун' },
-  'fun': { 'mn': 'Хөгжилтэй' }
+  'featured': { 'mn': 'Онцолсон' }
 } %}
 <script defer src="https://cdn.jsdelivr.net/npm/sweetalert2@11" type="text/javascript"></script>
 <script defer src="https://cdn.jsdelivr.net/gh/moxiecode/plupload/js/plupload.full.min.js"></script>
@@ -72,7 +69,7 @@
         </div>
         <div class="col-4">
             <label class="form-label">{{ 'date'|text }}</label>
-            <input class="form-control" name="published_date" id="published_date" value="{{ record['published_date']|e }}" placeholder="" type="datetime-local" autocomplete="off">
+            <input class="form-control" name="published_at" id="published_at" value="{{ record['published_at']|e }}" placeholder="" type="datetime-local" autocomplete="off">
         </div>
         <div class="col-4">
             <label class="form-label">{{ 'publish'|text }}</label>
@@ -114,8 +111,8 @@
                 <div class="invalid-feedback">{{ 'field-is-required'|text }}</div>
             </div>
             <div class="form-group mt-3">
-                <label class="form-label">{{ 'short'|text }}</label>
-                <textarea class="form-control" name="short">{{ record['short']|e }}</textarea>
+                <label class="form-label">{{ 'description'|text }}</label>
+                <textarea class="form-control" name="description">{{ record['description']|e }}</textarea>
             </div>
             <div class="form-group mt-3">
                 <label class="form-label">{{ 'photo'|text }}</label>
@@ -132,8 +129,8 @@
                 <img class="img-thumbnail img-fluid" id="photo_preview" src="{{ record['photo']|e }}" style="{% if record['photo'] is empty %}display:none;{% endif %}">
             </div>
             <div class="form-group mt-3">
-                <label class="form-label">{{ 'full'|text }}</label>
-                <textarea class="form-control" id="full" name="full" rows="10">{{ record['full']|e }}</textarea>
+                <label class="form-label">{{ 'content'|text }}</label>
+                <textarea class="form-control" id="content" name="content" rows="10">{{ record['content']|e }}</textarea>
             </div>
         </div>
         <div class="tab-pane pt-2" id="tab-files">
@@ -353,8 +350,8 @@
     });
     
     document.addEventListener('DOMContentLoaded', function () {
-        let full = document.getElementById('full');
-        sceditor.create(full, {
+        let content = document.getElementById('content');
+        sceditor.create(content, {
             format: 'xhtml',
             emoticonsEnabled: false,
             toolbarExclude: 'emoticon',
