--- a/application/raptor/content/page-update.html
+++ b/application/raptor/content/page-update.html
@@ -83,8 +83,8 @@
             </div>
         </div>
         <div class="col-3">
-            <label class="form-label" for="published_date">{{ 'date'|text }}</label>
-            <input class="form-control" name="published_date" id="published_date" value="{{ record['published_date']|e }}" placeholder="" type="datetime-local" autocomplete="off">
+            <label class="form-label" for="published_at">{{ 'date'|text }}</label>
+            <input class="form-control" name="published_at" id="published_at" value="{{ record['published_at']|e }}" placeholder="" type="datetime-local" autocomplete="off">
         </div>
         <div class="col-4">
             <label class="form-label">{{ 'publish'|text }}</label>
@@ -126,8 +126,8 @@
                 <div class="invalid-feedback">{{ 'field-is-required'|text }}</div>
             </div>
             <div class="form-group mt-3">
-                <label class="form-label">{{ 'short'|text }}</label>
-                <textarea class="form-control" name="short">{{ record['short']|e }}</textarea>
+                <label class="form-label">{{ 'description'|text }}</label>
+                <textarea class="form-control" name="description">{{ record['description']|e }}</textarea>
             </div>
             <div class="form-group mt-3">
                 <label class="form-label">{{ 'photo'|text }}</label>
@@ -144,8 +144,8 @@
                 <img class="img-thumbnail img-fluid" id="photo_preview" src="{{ record['photo']|e }}" style="{% if record['photo'] is empty %}display:none;{% endif %}">
             </div>
             <div class="form-group mt-3">
-                <label class="form-label">{{ 'full'|text }}</label>
-                <textarea class="form-control" id="full" name="full" rows="10">{{ record['full']|e }}</textarea>
+                <label class="form-label">{{ 'content'|text }}</label>
+                <textarea class="form-control" id="content" name="content" rows="10">{{ record['content']|e }}</textarea>
             </div>
         </div>
         <div class="tab-pane pt-2" id="tab-files">
@@ -363,8 +363,8 @@
     });
     
     document.addEventListener('DOMContentLoaded', function () {
-        let full = document.getElementById('full');
-        sceditor.create(full, {
+        let content = document.getElementById('content');
+        sceditor.create(content, {
             format: 'xhtml',
             emoticonsEnabled: false,
             toolbarExclude: 'emoticon',
