--- a/application/raptor/content/page-view.html
+++ b/application/raptor/content/page-view.html
@@ -57,7 +57,7 @@
     </div>
     <div class="col-3">
         <label class="form-label">{{ 'date'|text }}</label>
-        <input class="form-control" name="published_date" value="{{ record['published_date']|e }}" readonly placeholder="" type="datetime-local" autocomplete="off">
+        <input class="form-control" name="published_at" value="{{ record['published_at']|e }}" readonly placeholder="" type="datetime-local" autocomplete="off">
     </div>
     <div class="col-3">
         <label class="form-label">{{ 'category'|text }}</label>
@@ -101,8 +101,8 @@
             <input class="form-control" name="title" readonly value="{{ record['title']|e }}" maxlength="255" placeholder="" type="text" autocomplete="off">
         </div>
         <div class="form-group mt-3">
-            <label class="form-label">{{ 'short'|text }}</label>
-            <textarea class="form-control" name="short" readonly>{{ record['short']|e }}</textarea>
+            <label class="form-label">{{ 'description'|text }}</label>
+            <textarea class="form-control" name="description" readonly>{{ record['description']|e }}</textarea>
         </div>
         <div class="form-group mt-3">
             <label class="form-label">{{ 'photo'|text }}</label>
@@ -114,8 +114,8 @@
             {% endif %}
         </div>
         <div class="form-group mt-3">
-            <label class="form-label">{{ 'full'|text }}</label>
-            <textarea class="form-control" id="full" name="full" readonly rows="10">{{ record['full']|e }}</textarea>
+            <label class="form-label">{{ 'content'|text }}</label>
+            <textarea class="form-control" id="content" name="content" readonly rows="10">{{ record['content']|e }}</textarea>
         </div>
     </div>
     <div class="tab-pane pt-2" id="tab-files">
@@ -249,8 +249,8 @@
     }
 
     document.addEventListener('DOMContentLoaded', function () {
-        let full = document.getElementById('full');
-        sceditor.create(full, {
+        let content = document.getElementById('content');
+        sceditor.create(content, {
             format: 'xhtml',
             emoticonsEnabled: false,
             toolbarExclude: 'emoticon',
