--- a/application/raptor/content/news-insert.html
+++ b/application/raptor/content/news-insert.html
@@ -1,12 +1,15 @@
 {% set categories = {
-  'general': { 'mn': 'Цаг үеийн мэдээ' },
-  'announcement': { 'mn': 'ААН-ийн анхааралд'  },
-  'price': { 'mn': 'Үнэ, ханшийн мэдээ', 'en': 'Price and exchange rate news' },
-  'video': { 'mn': 'Видео мэдээ' }
+  'general': { 'mn': 'Ерөнхий' },
+  'photo': { 'mn': 'Фото' },
+  'video': { 'mn': 'Видео' },
+  'announcement': { 'mn': 'Зар мэдээлэл' },
+  'special': { 'mn': 'Тусгай' }
 } %}
 {% set types = {
   'common': { 'mn': 'Нийтлэг' },
-  'featured': { 'mn': 'Онцолсон' }
+  'featured': { 'mn': 'Онцолсон' },
+  'hot': { 'mn': 'Халуун' },
+  'fun': { 'mn': 'Хөгжилтэй' }
 } %}
 <script defer src="https://cdn.jsdelivr.net/npm/sweetalert2@11" type="text/javascript"></script>
 <script defer src="https://cdn.jsdelivr.net/gh/moxiecode/plupload/js/plupload.full.min.js"></script>
