--- a/application/raptor/content/news-update.html
+++ b/application/raptor/content/news-update.html
@@ -6,7 +6,9 @@
 } %}
 {% set types = {
   'common': { 'mn': 'Нийтлэг' },
-  'featured': { 'mn': 'Онцолсон' }
+  'featured': { 'mn': 'Онцолсон' },
+  'hot': { 'mn': 'Халуун' },
+  'fun': { 'mn': 'Хөгжилтэй' }
 } %}
 <script defer src="https://cdn.jsdelivr.net/npm/sweetalert2@11" type="text/javascript"></script>
 <script defer src="https://cdn.jsdelivr.net/gh/moxiecode/plupload/js/plupload.full.min.js"></script>
