--- a/application/raptor/content/page-insert.html
+++ b/application/raptor/content/page-insert.html
@@ -1,15 +1,12 @@
 {% set categories = {
   'general': { 'mn': 'Ерөнхий' },
-  'featured': { 'mn': 'Онцолсон' },
-  'attach': { 'mn': 'Хавсралт' },
-  'special': { 'mn': 'Тусгай' }
+  'featured': { 'mn': 'Онцолсон' }
 } %}
 {% set types = {
-  'menu': { 'mn': 'Үндсэн цэс' },
-  'top-menu': { 'mn': 'Толгойн цэс' },
-  'footer-menu': { 'mn': 'Хөлийн цэс' },
-  'dropdown-menu': { 'mn': 'Унжих цэс' },
-  'mega-menu': { 'mn': 'Мега цэс' }
+  'menu': { 'mn': 'Цэс' },
+  'important-menu': { 'mn': 'Чухал цэс' },
+  'mega-menu': { 'mn': 'Мега цэс' },
+  'special-page': { 'mn': 'Тусгай хуудас' }
 } %}
 <script defer src="https://cdn.jsdelivr.net/npm/sweetalert2@11" type="text/javascript"></script>
 <script defer src="https://cdn.jsdelivr.net/gh/moxiecode/plupload/js/plupload.full.min.js"></script>
