--- a/application/raptor/content/news-update.html
+++ b/application/raptor/content/news-update.html
@@ -1,8 +1,8 @@
 {% set categories = {
-  'general': { 'mn': 'Цаг үеийн мэдээ' },
-  'announcement': { 'mn': 'ААН-ийн анхааралд'  },
-  'price': { 'mn': 'Үнэ, ханшийн мэдээ', 'en': 'Price and exchange rate news' },
-  'video': { 'mn': 'Видео мэдээ' }
+  'general': { 'mn': 'Ерөнхий' },
+  'video': { 'mn': 'Видео' },
+  'announcement': { 'mn': 'Зар мэдээлэл' },
+  'special': { 'mn': 'Тусгай' }
 } %}
 {% set types = {
   'common': { 'mn': 'Нийтлэг' },
