content minor improvment

--- a/application/raptor/content/page-view.html
+++ b/application/raptor/content/page-view.html
@@ -1,15 +1,12 @@
+{% set types = {
+  'menu': { 'mn': 'Цэс' },
+  'important-menu': { 'mn': 'Чухал цэс' },
+  'mega-menu': { 'mn': 'Мега цэс' },
+  'special-page': { 'mn': 'Тусгай хуудас' }
+} %}
 {% set categories = {
   'general': { 'mn': 'Ерөнхий' },
-  'featured': { 'mn': 'Онцолсон' },
-  'attach': { 'mn': 'Хавсралт' },
-  'special': { 'mn': 'Тусгай' }
-} %}
-{% set types = {
-  'menu': { 'mn': 'Үндсэн цэс' },
-  'top-menu': { 'mn': 'Толгойн цэс' },
-  'footer-menu': { 'mn': 'Хөлийн цэс' },
-  'dropdown-menu': { 'mn': 'Унжих цэс' },
-  'mega-menu': { 'mn': 'Мега цэс' }
+  'featured': { 'mn': 'Онцолсон' }
 } %}
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sceditor@latest/minified/themes/default.min.css">
 <script defer src="https://cdn.jsdelivr.net/combine/npm/sceditor@latest/minified/sceditor.min.js,npm/sceditor@latest/minified/formats/xhtml.min.js,npm/sceditor@latest/minified/icons/monocons.min.js"></script>
