--- a/application/raptor/content/file/files-index.html
+++ b/application/raptor/content/file/files-index.html
@@ -1,5 +1,5 @@
-<link rel="stylesheet" href="{{ index }}/assets/vendor/fancyapps-ui-5.0.36-dist/fancybox/fancybox.css">
-<script defer src="{{ index }}/assets/vendor/fancyapps-ui-5.0.36-dist/fancybox/fancybox.umd.js"></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css">
+<script defer src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
 <div class="bd-callout bd-callout-dark text-bg-light alert alert-dismissible fade show shadow-sm">
     <span class="d-block mb-2">
         <i class="bi bi-folder-fill"></i> Мэдээллийн санд нийт <strong>{{ total['tables'] }}</strong> хүснэгтэд <strong>{{ total['rows'] }}</strong> ширхэг файл хатуу дискний <strong>{{ total['sizes'] }}</strong>  хэмжээг эзэлсэн байна.
@@ -26,23 +26,7 @@
     </thead>
 </table>
 <script type="text/javascript">
-    function copy(elem) {
-        let text = document.getElementById(elem);
-        if (document.body.createTextRange) {
-            let range = document.body.createTextRange();
-            range.moveToElementText(text);
-            range.select();
-        } else if (window.getSelection) {
-            let selection = window.getSelection();
-            let range = document.createRange();
-            range.selectNodeContents(text);
-            selection.removeAllRanges();
-            selection.addRange(range);
-        }
-        document.execCommand('copy');
-    }
-
-    function basename(url) {
+    function getBasename(url) {
         return url.split(/.*[\/|\\]/)[1];
     }
 
@@ -64,7 +48,7 @@
         return bytes.toFixed(1) + units[u];
     }
     
-    function escape(s) {
+    function escapeStr(s) {
         let lookup = {
             '&': "&amp;",
             '"': "&quot;",
@@ -79,7 +63,7 @@
         const filesLink = `{{ 'files-modal'|link({'table': table}) }}`;
         motable.prototype.append = function (file) {
             let fileIcon;
-            let fileName = escape(basename(file['path']));
+            let fileName = escapeStr(getBasename(file['path']));
             let fileLinkAttr = `target="__blank" onclick="return confirm('Are you sure you want to open this file [${fileName}]?')"`;
             let fileAction = ` <a class="btn btn-sm btn-dark ajax-modal" data-bs-target="#static-modal" data-bs-toggle="modal" href="${filesLink}?modal=${file['type']}-tag&id=${file['id']}"><i class="bi bi-code"></i></a>`;
             switch (file['type']) {
@@ -88,7 +72,7 @@
                         fileIcon = `<img src="${file['path']}" style="max-height:7.5rem;max-width:20rem;height:100%">`;
                         if (file['mime_content_type'] !== 'image/gif') {
                             if (file['description']) {
-                                fileLinkAttr = `file-data-fancybox data-caption="${escape(file['description'])}"`;
+                                fileLinkAttr = `file-data-fancybox data-caption="${escapeStr(file['description'])}"`;
                             } else {
                                 fileLinkAttr = `file-data-fancybox data-caption="${fileName}"`;
                             }
