--- a/application/raptor/authentication/login-reset-password.html
+++ b/application/raptor/authentication/login-reset-password.html
@@ -34,10 +34,10 @@
                 </a>
             </div>
             {% endif %}
-            {% if title is defined and notice is defined %}
+            {% if title is defined and message is defined %}
             <div>
                 <h3>{{ title }}</h3>
-                <span class="text-center">{{ notice }}</span>
+                <span class="text-center">{{ message }}</span>
                 <hr>
                 <a class="btn btn-secondary shadow" href="{{ 'home'|link }}">{{ 'back'|text }}</a>
             </div>
@@ -52,7 +52,6 @@
                 {% endif %}
                 <input type="hidden" name="forgot_password" value="{{ forgot_password }}">
                 <input type="hidden" name="user_id" value="{{ user_id }}">
-                <input type="hidden" name="created_at" value="{{ created_at }}">
                 <input class="form-control mt-3 mb-2" required type="password" placeholder="{{ 'new-password'|text|e }}" name="password_new" id="password_new" autocomplete="password_new-complete">
                 <input class="form-control mb-3" required type="password" placeholder="{{ 'retype-new-password'|text|e }}" name="password_retype" id="password_retype" autocomplete="password_retype-complete">
                 <div class="mt-2">
