--- a/application/raptor/content/settings/settings.html
+++ b/application/raptor/content/settings/settings.html
@@ -354,7 +354,7 @@
                     body: JSON.stringify({
                         'ORDER BY': 'id Desc',
                         'CONTEXT': {
-                            'action': 'settings'
+                            'action': 'settings-*'
                         },
                         'LIMIT':  10000
                     })
