--- a/application/raptor/localization/localization-index.html
+++ b/application/raptor/localization/localization-index.html
@@ -1,8 +1,7 @@
 {% set can_insert = user.can('system_localization_insert') %}
 {% set can_update = user.can('system_localization_update') %}
 {% set can_delete = user.can('system_localization_delete') %}
-<link rel="stylesheet" href="{{ index }}/assets/vendor/sweetalert2/sweetalert2.min.css">
-<script defer src="{{ index }}/assets/vendor/sweetalert2/sweetalert2.min.js" type="text/javascript"></script>
+<script defer src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <div class="d-flex flex-wrap justify-content-between align-items-center text-uppercase rounded p-1 mb-2 shadow">
     <h3 class="px-1 my-auto fs-6 text-danger text-uppercase">
         <i class="bi bi-globe"></i> {{ 'localization'|text }}
@@ -174,8 +173,8 @@
             } else {
                 questiondel = '<p class="text-danger mb-3">Are you sure to delete the language ({0})?</p>';
             }
-            let name = thisRow.children[2].innerHTML;
-            let ask = questiondel.format(name.replace(/<\/?[^>]+(>|$)/g, ''));
+            let title = thisRow.children[2].innerHTML;
+            let ask = questiondel.format(title.replace(/<\/?[^>]+(>|$)/g, ''));
             let src = '';
             let flag = thisRow.children[1].querySelector('img');
             if (flag) {
@@ -202,7 +201,7 @@
                                 'Content-Type': 'application/json'
                             },
                             body: JSON.stringify({
-                                name,
+                                title,
                                 reason,
                                 id: btn.value
                             })
@@ -216,7 +215,7 @@
 
                         window.location.reload();
 
-                        NotifyTop('success', `{{ 'success'|text|e }}`, response.message ?? `Language (${name}) deleted`);
+                        NotifyTop('success', `{{ 'success'|text|e }}`, response.message ?? `Language (${title}) deleted`);
                     }).catch(error => {
                         Swal.showValidationMessage(error.message);
                     });
