--- a/application/raptor/localization/text/text-update-modal.html
+++ b/application/raptor/localization/text/text-update-modal.html
@@ -23,7 +23,7 @@
                         <img src="https://flagcdn.com/20x15/{{ flag }}.png" srcset="https://flagcdn.com/40x30/{{ flag }}.png 2x" width="16" height="12" alt="{{ lang|e }}">)
                     </label>
                     <div class="col-9">
-                        <textarea class="form-control" name="text[{{ code }}]" required maxlength="255">{{ record['content']['text'][code] }}</textarea>
+                        <textarea class="form-control" name="text[{{ code }}]" required maxlength="255">{{ record['localized']['text'][code] }}</textarea>
                         <div class="invalid-feedback">{{ 'field-is-required'|text }}</div>
                     </div>
                 </div>
