--- a/application/raptor/user/user-index.html
+++ b/application/raptor/user/user-index.html
@@ -1,5 +1,4 @@
-<link rel="stylesheet" href="{{ index }}/assets/vendor/sweetalert2/sweetalert2.min.css">
-<script defer src="{{ index }}/assets/vendor/sweetalert2/sweetalert2.min.js" type="text/javascript"></script>
+<script defer src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <link rel="stylesheet" href="{{ index }}/assets/vendor/choices-11.0.2/styles/choices.min.css">
 <script defer src="{{ index }}/assets/vendor/choices-11.0.2/scripts/choices.min.js"></script>
 <div class="d-flex flex-wrap justify-content-between align-items-center text-uppercase rounded p-1 mb-2 shadow">
